Fix (MobileSideMenu) z-index fix

--- a/src/components/UI/MobileSideMenu/MobileSideMenu.module.scss
+++ b/src/components/UI/MobileSideMenu/MobileSideMenu.module.scss
@@ -33,6 +33,9 @@
             translate: 0 0 0;
         }
     }
+    &_panel {
+        z-index: 975;
+    }
     &_button {
         position: absolute;
         z-index: 999;
